--- a/SocialHousingCo/Createaccount/templates/createaccount.html
+++ b/SocialHousingCo/Createaccount/templates/createaccount.html
@@ -54,7 +54,9 @@ background-attachment: fixed;
             <h1 class="text-center">Create an Account</h1>
           </div>
           <div class="card-body">
-            <form method="POST" action="/login">
+            <form method="POST" action="{% url 'register' %}">
+              {% csrf_token %}
+
               <div class="form-group">
                 <label for="Email">Email:</label>
                 <input type="email" id="Email" name="Email" class="form-control" required>
@@ -67,11 +69,27 @@ background-attachment: fixed;
                 <label for="password">Confrim Password:</label>
                 <input type="password" id="confrimpassword" name="confirmpassword" class="form-control" required>
               </div>
+
+              <div class="form-group">
+                <label for="role">Role:</label>
+                <input value ='Renter' type="radio" id="renter" name="role"  required>
+                <label for="renter">Renter</label>
+                
+                <input value ='Landlord' type="radio" id="landlord" name="role"  required>
+                <label for="landlord">Landlord</label>
+              </div>
+
+    
               <div class="d-flex">
-              <input type="submit" value="Set up My Profile as Renter" class=" btn btn-primary btn-block">
-              <p>&nbsp</p>
-              <input type="submit" value="Set up My Profile as Landlord" class=" btn btn-primary btn-block">
+
+
+
+              <input type="submit" value="Set up My Profile" class=" btn btn-primary btn-block" >
+              
+           
             </div>
+
+
               <p></p>
               <div style = "position:relative; left:80px; top:2px;">
               <a href="/forgotpassword" class=" btn btn-link " >Forgot password?</a>
