--- a/Listpage/templates/detailspage.html
+++ b/Listpage/templates/detailspage.html
@@ -128,7 +128,7 @@
                     <h6>Available Now</h6>
                 </div>
                 <div class="col-md-4 px-1 d-none d-sm-block">
-                    <img src="{% static 'Listpage/images/sample_house.jpg' %}" class="img-fluid" alt="Sample House 1">
+                    <img src=" /static/Listpage{{ property.image.url }}" class="img-fluid" alt="Sample House 1">
                 </div>
                 <div class="col-md-2 d-none d-sm-block">
                     <div class="row-md-4">
