--- a/Userprofile/templates/landlord.html
+++ b/Userprofile/templates/landlord.html
@@ -25,15 +25,12 @@
             <p class="subtitle">Create your Landlord Profile. </p></div>
 
         <div style="width:400px; margin-left:20%;">
-            <h1 class="profile-title">Personal</h1></div>
+            <h1 class="profile-title"> Landord Personal</h1></div>
 
             <div class="button-container",div style="width:400px; margin-left:20%;">
                 <a href="{% url 'personal' %}" class="button">Personal details</a>
                 <a href="{% url 'aboutme' %}" class="button">About me</a>
                 <a href="identity-documents.html" class="button">Identity documents</a>
-                <a href="tenant-check.html" class="tanant-button">
-                <span class="main-text">Tenant check (recommended)</span><br>
-                <span class="extra-text">Give yourself a better chance. Help property managers evaluate you faster.</span>
                  </a></div>
 
     
