--- a/Userprofile/templates/profile.html
+++ b/Userprofile/templates/profile.html
@@ -25,30 +25,19 @@
             <p class="subtitle">Create your Renter Profile once and reuse it for all your applications.</p></div>
 
         <div style="width:400px; margin-left:20%;">
-            <h1 class="profile-title">Personal</h1></div>
+            <h1 class="profile-title">Ranter Personal</h1></div>
 
             <div class="button-container",div style="width:400px; margin-left:20%;">
                 <a href="{% url 'personal' %}" class="button">Personal details</a>
                 <a href="{% url 'aboutme' %}" class="button">About me</a>
-                <a href="address-history.html" class="button">Address history</a>
-                <a href="employment.html" class="button">Employment</a>
-                <a href="income.html" class="button">Income</a>
+                <a href="{% url 'income' %}" class="button">Income</a>
                 <a href="{% url 'identity' %}"class="button">Identity documents</a>
-                <a href="emergency-contact.html" class="button">Emergency contact</a>
-                <a href="tenant-check.html" class="tanant-button">
-                <span class="main-text">Tenant check (recommended)</span><br>
+                <a href="{% url 'referal' %}" class="tanant-button">
+                <span class="main-text">Referral letter/Reference attachment (recommended)</span><br>
                 <span class="extra-text">Give yourself a better chance. Help property managers evaluate you faster.</span>
                  </a></div>
 
-            <div style="width:400px; margin-left:20%;">
-                <h2 class="household-title">Household</h2>
-            </div>
-            <div class="button-container",div style="width:400px; margin-left:20%;">
-                <a href="People.html" class="tanant-button">
-                <span class="main-text">People</span><br>
-                <span class="extra-text">Add or remove people you will live in this property with.</span></a>
-                <a href="Pets.html" class="button">Pets</a>
-                <a href="Utility connection service.html" class="button">Utilty connection service</a>
+        
   
 
      </body>
