functioning website with all views

--- a/Userprofile/templates/landlord.html
+++ b/Userprofile/templates/landlord.html
@@ -15,13 +15,17 @@
     <body>
         <header class="header">
             <div class="logo-container">
-                <a href="#" class="logo">
+                <a href="/" class="logo">
                     <img src="{% static 'images/logo.png' %}" alt="Your Logo" />
                 </a>
             </div>
         </header>
         <div style="width:400px; margin-left:20%;">
             <h1 class="renterprofile-title">Your Application</h1>
+
+            <a href="{% url 'logout' %}">Sign Out</a>
+
+
             <p class="subtitle">Create your Landlord Profile. </p></div>
 
         <div style="width:400px; margin-left:20%;">
