--- a/Listpage/templates/detailspage.html
+++ b/Listpage/templates/detailspage.html
@@ -34,9 +34,14 @@
             <li class="nav-item align-self-center d-none d-sm-block">
                 <a class="nav-link link-dark" href="/">Home</a>
             </li>
-            <li class="nav-item align-self-center ms-auto d-none d-sm-block">
-                <a class="nav-link link-dark" href="/listpage/createproperty/">Create Property</a>
-            </li>
+
+
+            {% if user.is_landlord %}
+                <li class="nav-item align-self-center ms-auto d-none d-sm-block">
+                 <a class="nav-link link-dark" href="/listpage/createproperty/">Create Property</a>
+                </li>
+            {% endif %}
+            
             <li class="nav-item align-self-center ms-auto d-none d-sm-block">
                 <a class="nav-link link-dark" href="#">News</a>
             </li>
@@ -70,7 +75,12 @@
     <div class="collapse" id="navbarToggleExternalContent">
         <div class="bg-white p-2">
             <a href="/" class="nav-link link-dark">Home</a>
+
+        {% if user.is_landlord %}
             <a href="/listpage/createproperty/" class="nav-link link-dark">Create Property</a>
+        {% endif %}
+            
+
             <a href="#" class="nav-link link-dark">News</a>
             <a href="#" class="nav-link link-dark">Features</a>
             <a href="#" class="nav-link link-dark">Support</a>
@@ -83,7 +93,13 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
         </svg>Back to results</a>
+
+
+    {% if user.is_landlord %}
         <a class="btn btn-white" class="float: right;" type="button" href="{% url 'editproperty' property.id %}">Edit</a>
+    {% endif %}
+
+        
     </div>
     <div style="width: 100%; max-width: 1520px; margin: 0 auto;">
         <div class="container-fluid p-0" style="background-color: white;">
@@ -128,7 +144,12 @@
                     <h6>Available Now</h6>
                 </div>
                 <div class="col-md-4 px-1 d-none d-sm-block">
-                    <img src=" /static/Listpage{{ property.image.url }}" class="img-fluid" alt="Sample House 1">
+                    
+                    {% if property.image %}
+                        <img src="{{ property.image.url }}" class="img-fluid">
+                        {% else %}
+                        <img src="{% static 'Listpage/images/unknown_prop.png' %}" class="img-fluid">
+                        {% endif %}
                 </div>
                 <div class="col-md-2 d-none d-sm-block">
                     <div class="row-md-4">
