--- a/Home/templates/homepage.html
+++ b/Home/templates/homepage.html
@@ -2,90 +2,100 @@
 
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>{% block title %}Home Page {% endblock %}</title>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-    content="width=device-width, initial-scale=1.0">
-    {% load bootstrap5 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
-    {% load humanize %}
+  <title>{% block title %}Home Page {% endblock %}</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {% load bootstrap5 %}
+  {% bootstrap_css %}
+  {% bootstrap_javascript %}
+  {% load humanize %}
 </head>
-<body style="background-color: white; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
-    <div class="container-fluid p-0">
-        <ul class="nav" style="background-color: #80D8FF;">
-            <li class="nav-item align-self-center d-sm-none">
-                <a class="nav-link link-dark navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-                    </svg>
-                </a>
-            </li>
-            <li class="nav-item align-self-center">
-                <a class="nav-link link-dark" href="/">
-                    <img src="{% static 'Listpage/images/logo_new.png' %}" alt="LOGO" width="140" height="40.2">
-                </a>
-            </li>
-            <li class="nav-item align-self-center d-none d-sm-block">
-                <a class="nav-link link-dark" href="/">Home</a>
-            </li>
-            <li class="nav-item align-self-center ms-auto d-none d-sm-block">
-                <a class="nav-link link-dark" href="/listpage/createproperty/">Create Property</a>
-            </li>
-            <li class="nav-item align-self-center ms-auto d-none d-sm-block">
-                <a class="nav-link link-dark" href="/listpage/">List Page</a>
-            </li>
-            <li class="nav-item align-self-center ms-auto d-none d-sm-block">
-                <a class="nav-link link-dark" href="#">Features</a>
-            </li>
-            <li class="nav-item align-self-center ms-auto d-none d-sm-block">
-                <a class="nav-link link-dark" href="#">Support</a>
-            </li>
-            <li class="nav-item align-self-center ms-auto d-none d-sm-block">
-                <a class="nav-link link-dark" href="#">Contact</a>
-            </li>
-            <li class="nav-item align-self-center ms-auto">
-                <a class="nav-link link-dark" href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-bell-fill" viewBox="0 0 16 16">
-                        <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zm.995-14.901a1 1 0 1 0-1.99 0A5.002 5.002 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901z"/>
-                    </svg>
-                </a>
-            </li>
-            <li class="nav-item align-self-center">
-                <a class="nav-link link-dark" href="/login">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                        <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-                    </svg>
-                </a>
-            </li>
-        </ul>
-    </div>
 
-    <div class="collapse" id="navbarToggleExternalContent">
-        <div class="bg-white p-2">
-            <a href="/" class="nav-link link-dark">Home</a>
-            <a href="/listpage/createproperty/" class="nav-link link-dark">Create Property</a>
-            <a href="#" class="nav-link link-dark">News</a>
-            <a href="#" class="nav-link link-dark">Features</a>
-            <a href="#" class="nav-link link-dark">Support</a>
-            <a href="#" class="nav-link link-dark">Contact</a>
-        </div>
-    </div>
+<body
+  style="background-color: white; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+  <div class="container-fluid p-0">
+    <ul class="nav" style="background-color: #80D8FF;">
+      <li class="nav-item align-self-center d-sm-none">
+        <a class="nav-link link-dark navbar-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+            viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+              d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+          </svg>
+        </a>
+      </li>
+      <li class="nav-item align-self-center">
+        <a class="nav-link link-dark" href="/">
+          <img src="{% static 'Listpage/images/logo_new.png' %}" alt="LOGO" width="140" height="40.2">
+        </a>
+      </li>
+      <li class="nav-item align-self-center d-none d-sm-block">
+        <a class="nav-link link-dark" href="/">Home</a>
+      </li>
+      <li class="nav-item align-self-center ms-auto d-none d-sm-block">
+        <a class="nav-link link-dark" href="/listpage/createproperty/">Create Property</a>
+      </li>
+      <li class="nav-item align-self-center ms-auto d-none d-sm-block">
+        <a class="nav-link link-dark" href="/listpage/">List Page</a>
+      </li>
+      <li class="nav-item align-self-center ms-auto d-none d-sm-block">
+        <a class="nav-link link-dark" href="#">Features</a>
+      </li>
+      <li class="nav-item align-self-center ms-auto d-none d-sm-block">
+        <a class="nav-link link-dark" href="#">Support</a>
+      </li>
+      <li class="nav-item align-self-center ms-auto d-none d-sm-block">
+        <a class="nav-link link-dark" href="#">Contact</a>
+      </li>
+      <li class="nav-item align-self-center ms-auto">
+        <a class="nav-link link-dark" href="#">
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-bell-fill"
+            viewBox="0 0 16 16">
+            <path
+              d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zm.995-14.901a1 1 0 1 0-1.99 0A5.002 5.002 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901z" />
+          </svg>
+        </a>
+      </li>
+      <li class="nav-item align-self-center">
+        <a class="nav-link link-dark" href="/login">
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle"
+            viewBox="0 0 16 16">
+            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+            <path fill-rule="evenodd"
+              d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
 
-    <div style="width: 100%; max-width: 620px; margin: 0 auto; font-weight: bold;">
-        <h1 class="py-4">Welcome To Social Housing Co</h1>
-        
+  <div class="collapse" id="navbarToggleExternalContent">
+    <div class="bg-white p-2">
+      <a href="/" class="nav-link link-dark">Home</a>
+      <a href="/listpage/createproperty/" class="nav-link link-dark">Create Property</a>
+      <a href="#" class="nav-link link-dark">List Page</a>
+      <a href="#" class="nav-link link-dark">Features</a>
+      <a href="#" class="nav-link link-dark">Support</a>
+      <a href="#" class="nav-link link-dark">Contact</a>
     </div>
+  </div>
 
-    <!-- Showcase -->
-<section id="showcase">
+  <div style="width: 100%; max-width: 620px; margin: 0 auto; font-weight: bold;">
+    <h1 class="py-4">Welcome To Social Housing Co</h1>
+
+  </div>
+
+  <!-- Showcase -->
+  <section id="showcase">
     <div class="container text-center">
       <div class="home-search p-5">
         <div class="overlay p-5">
-          <h2 class="display-4 mb-4" >
-            <strong>Quality Price Location</strong> 
+          <h2 class="display-4 mb-4">
+            <strong>Quality Price Location</strong>
           </h2>
           <p class="lead"></p>
           <div class="search">
@@ -107,7 +117,7 @@
                   <select name="state" class="form-control">
                     <option selected="true" disabled="disabled">State (All)</option>
                     {% for key,value in state_choices.items %}
-                      <option value="{{ key }}">{{ value }}</option>
+                    <option value="{{ key }}">{{ value }}</option>
                     {% endfor %}
                   </select>
                 </div>
@@ -119,7 +129,7 @@
                   <select name="bedrooms" class="form-control">
                     <option selected="true" disabled="disabled">Bedrooms (All)</option>
                     {% for key,value in bedroom_choices.items %}
-                      <option value="{{ key }}">{{ value }}</option>
+                    <option value="{{ key }}">{{ value }}</option>
                     {% endfor %}
                   </select>
                 </div>
@@ -127,12 +137,13 @@
                   <select name="price" class="form-control" id="type">
                     <option selected="true" disabled="disabled">Max Price (Any)</option>
                     {% for key,value in price_choices.items %}
-                      <option value="{{ key }}">{{ value }}</option>
+                    <option value="{{ key }}">{{ value }}</option>
                     {% endfor %}
                   </select>
                 </div>
               </div>
-              <button class="btn btn-secondary btn-block mt-4" style="background-color: #80D8FF; color: black;" type="submit">Search</button>
+              <button class="btn btn-secondary btn-block mt-4" style="background-color: #80D8FF; color: black;"
+                type="submit">Search</button>
             </form>
           </div>
         </div>
@@ -141,6 +152,7 @@
   </section>
 
 
-    
+
 </body>
+
 </html>
