--- a/Listpage/templates/detailspage.html
+++ b/Listpage/templates/detailspage.html
@@ -131,7 +131,7 @@
                     <img src=" /static/Listpage{{ property.image.url }}" class="img-fluid" alt="Sample House 1">
                 </div>
                 <div class="col-md-2 d-none d-sm-block">
-                    <div class="row-md-4">
+                    <!-- <div class="row-md-4">
                         <img src="{% static 'Listpage/images/sample_house2.jpg' %}" style="max-width: 70%;" alt="Sample House 2">
                     </div>
                     <div class="row-md-4" style="padding: 4px 0;">
@@ -139,7 +139,7 @@
                     </div>
                     <div class="row-md-4">
                         <img src="{% static 'Listpage/images/sample_house4.jpg' %}" style="max-width: 70%;" alt="Sample House 4">
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
