removed map plugin error v2.0

--- a/Listpage/templates/createproperty.html
+++ b/Listpage/templates/createproperty.html
@@ -113,28 +113,28 @@
                 <input type="file" id="prop_image" name="prop_image">
             </div>
             <div class="form-group">
-                <label for="TitleInput">Title</label>
-                <input type="text" class="form-control" id="prop_title" name="prop_title" placeholder="Enter Title">
+                <label for="TitleInput">Title*</label>
+                <input type="text" class="form-control" id="prop_title" name="prop_title" placeholder="Enter Title" required>
             </div>
             <div class="form-group">
                 <label for="AddressInput">Address*</label>
-                <input type="text" class="form-control" id="prop_address" name="prop_address" placeholder="Enter Address">
+                <input type="text" class="form-control" id="prop_address" name="prop_address" placeholder="Enter Address" required>
             </div>
             <div class="form-group">
                 <label for="SuburbInput">Suburb*</label>
-                <input type="text" class="form-control" id="prop_suburb" name="prop_suburb" placeholder="Enter Suburb">
+                <input type="text" class="form-control" id="prop_suburb" name="prop_suburb" placeholder="Enter Suburb" required>
             </div>
             <div class="form-group">
                 <label for="StateInput">State*</label>
-                <input type="text" class="form-control" id="prop_state" name="prop_state" placeholder="Enter State">
+                <input type="text" class="form-control" id="prop_state" name="prop_state" placeholder="Enter State" required>
             </div>
             <div class="form-group">
                 <label for="PostcodeInput">Postcode*</label>
-                <input type="text" class="form-control" id="prop_pcode" name="prop_pcode" placeholder="Enter Postcode">
+                <input type="text" class="form-control" id="prop_pcode" name="prop_pcode" placeholder="Enter Postcode" required>
             </div>
             <div class="form-group">
                 <label for="PriceInput">Price*</label>
-                <input type="number" class="form-control" id="prop_price" name="prop_price" placeholder="Enter Price">
+                <input type="number" class="form-control" id="prop_price" name="prop_price" placeholder="Enter Price" required>
             </div>
             <div class="d-flex">
                 <span class="form-group">
@@ -151,8 +151,8 @@
                 </span>
             </div>
             <div class="form-group">
-                <label for="DescriptionInput">Description</label>
-                <input type="text" class="form-control" id="prop_description" name="prop_description" placeholder="Enter Description">
+                <label for="DescriptionInput">Description*</label>
+                <input type="text" class="form-control" id="prop_description" name="prop_description" placeholder="Enter Description" required>
             </div>
             <button type="submit" class="btn btn-primary my-3">Add Property</button>
         </form>
