--- a/Userprofile/templates/identity-documents.html
+++ b/Userprofile/templates/identity-documents.html
@@ -24,28 +24,43 @@
             <h1 class="personal-title">Identity documents </h1>
         </div>
 
-        <div style="width:400px; margin-left:20%; margin-top: 3%;">
-            <h3 class="label">Add your ID</h6>
-            <p style="white-space: nowrap;">Upload images of two IDs. At least one ID must have your photo on it.</p>
-        </div>
-
-
-        <div class="button-container", style="width:600px; margin-left:20%; margin-top: 3%;">
-            <button id="add-photo-id" class="button">Add Photo ID</button>           
-            <button id="add-second-id" class="button">Add Second ID</button>
-            
-        </div>
-
-
-        
-    
-        <div style="width:auto; margin-left:17.5%;margin-top: 4%;">
-            <div class="button-container">
-                <button class="cancel-btn" onclick="location.href='{% url 'profiles' %}'">Cancel</button>
-                <button class="save-btn">Save and back</button>
-                
+        <form method="POST">
+            {% csrf_token %}
+            <div style="width:400px; margin-left:20%; margin-top: 3%;">
+                <h3 class="label">Add your ID</h6>
+                <p style="white-space: nowrap;">Upload images of two IDs. At least one ID must have your photo on it.</p>
             </div>
-        </div>
+
+            <div style="width:600px; margin-left:20%; margin-top: 3%;">
+                <div class="form-group">
+                    <label for="ImageInput" style="width:200px;">Add Photo ID</label><br/>
+                    <input type="file" id="photoid" name="photoid">
+                </div>
+                {% if user.photoid %}
+                <img src="{{ user.photoid.url }}" style="width: 100%;">
+                {% endif %}
+                <div class="form-group">
+                    <label for="ImageInput" style="width:200px;">Add Second ID</label><br/>
+                    <input type="file" id="secondid" name="secondid" value="Upload">
+                </div>
+                {% if user.secondid %}
+                <img src="{{ user.secondid.url }}" style="width: 100%;">
+                {% endif %}
+            </div>
+            
+        
+            <div style="width:auto; margin-left:17.5%;margin-top: 4%;">
+                <div class="button-container">
+                    {% if user.is_landlord %}
+                    <button type="submit" class="cancel-btn" formaction="{% url 'land' %}">Cancel</button> 
+                    {% else %}
+                    <button type="submit" class="cancel-btn" formaction="{% url 'profiles' %}">Cancel</button> 
+                    {% endif %}
+                    <button type="submit" class="save-btn" formaction="{% url 'updateidentity' %}">Save and back</button>
+                    
+                </div>
+            </div>
+        </form>
         
      </body>
 
