--- a/Userprofile/templates/personal-details.html
+++ b/Userprofile/templates/personal-details.html
@@ -51,15 +51,11 @@
         <div style="width:auto; margin-left:17%;margin-top: 4%;">
             <div class="button-container">
                 {% if user.is_landlord %}
-                <button type="submit" class="cancel-btn" formaction="{% url 'landlord' %}">Cancel</button> 
+                <button type="submit" class="cancel-btn" formaction="{% url 'land' %}">Cancel</button> 
                 {% else %}
                 <button type="submit" class="cancel-btn" formaction="{% url 'profiles' %}">Cancel</button> 
                 {% endif %}
                 <button type="submit" class="save-btn" formaction="{% url 'updatedetails' %}">Save and back</button>
-                <!-- <form method="POST" action="{% url 'button' %}">
-                    {% csrf_token %}
-                    <button type="submit" class="save-btn">Save and back</button>
-                </form> -->
                 
             </div>
         </div>
