--- a/Userprofile/templates/landlord.html
+++ b/Userprofile/templates/landlord.html
@@ -21,7 +21,7 @@
             </div>
         </header>
         <div style="width:400px; margin-left:20%;">
-            <h1 class="renterprofile-title"> {{ user.username }} Your Application</h1>
+            <h1 class="renterprofile-title">  Your Application</h1>
 
 
 
