--- a/Home/templates/homepage.html
+++ b/Home/templates/homepage.html
@@ -11,6 +11,70 @@
   {% bootstrap_css %}
   {% bootstrap_javascript %}
   {% load humanize %}
+
+  <style>
+      #showcase {
+      background: url(../img/showcase.jpg) no-repeat top center fixed/cover;
+      position: relative;
+      min-height: 850px;
+      color: #fff;
+      padding-top: 6rem; }
+    #showcase .home-search {
+      min-height: 400px;
+      position: relative;
+      border-radius: 5px; }
+    #showcase .overlay {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      min-height: 400px;
+      width: 100%;
+      background: rgba(51, 51, 51, 0.8); }
+
+    #showcase-inner {
+      background: url(../img/building.jpg) no-repeat top center fixed/cover;
+      position: relative;
+      overflow: hidden;
+      min-height: 200px; }
+      #showcase-inner::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        min-height: 100%;
+        width: 80%;
+        background-color: rgba(128, 216, 255, 0.8); }
+      #showcase-inner.showcase-search {
+        min-height: 270px; }
+
+      @media (max-width: 991px) {
+        #showcase {
+          padding-top: 4rem; }
+          #showcase h1 {
+            font-size: 40px; }
+        .hide-md-down {
+          display: none; } }
+
+      @media (max-width: 768px) {
+        #showcase {
+          padding-top: 3rem; }
+          #showcase h1 {
+            font-size: 40px; }
+          #showcase p {
+            display: none; }
+        #top-bar {
+          text-align: center; }
+          #top-bar .social {
+            text-align: center !important; } }
+
+      @media (max-width: 576px) {
+        #showcase h1 {
+          font-size: 30px; }
+        #showcase-inner h1 {
+          font-size: 40px; } }
+
+  </style>
 </head>
 
 <body
@@ -88,70 +152,75 @@
     <h1 class="py-4">Welcome To Social Housing Co</h1>
 
   </div>
+<!-- Showcase -->
 
-  <!-- Showcase -->
-  <section id="showcase">
-    <div class="container text-center">
-      <div class="home-search p-5">
-        <div class="overlay p-5">
-          <h2 class="display-4 mb-4">
-            <strong>Quality Price Location</strong>
-          </h2>
-          <p class="lead"></p>
-          <div class="search">
-            <form action="">
-              <!-- Form Row 1 -->
-              <div class="form-row">
-                <div class="col-md-4 mb-3">
-                  <label class="sr-only">Keywords</label>
-                  <input type="text" name="keywords" class="form-control" placeholder="Keyword (Pool, Garage, etc)">
-                </div>
-
-                <div class="col-md-4 mb-3">
-                  <label class="sr-only">City</label>
-                  <input type="text" name="city" class="form-control" placeholder="City">
-                </div>
-
-                <div class="col-md-4 mb-3">
-                  <label class="sr-only">State</label>
-                  <select name="state" class="form-control">
-                    <option selected="true" disabled="disabled">State (All)</option>
-                    {% for key,value in state_choices.items %}
-                    <option value="{{ key }}">{{ value }}</option>
-                    {% endfor %}
-                  </select>
-                </div>
+<section id="showcase">
+  <div class="container text-center">
+    <div class="home-search p-5">
+      <div class="overlay p-5">
+        <h1 class="display-4 mb-4" >
+          <strong>Quality Price Location</strong> 
+        </h1>
+        <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae quas, asperiores eveniet vel nostrum magnam
+          voluptatum tempore! Consectetur, id commodi!</p>
+        <div class="search">
+          <form action="{% url 'search' %}">
+            <!-- Form Row 1 -->
+            <div class="form-row">
+              <div class="col-md-4 mb-3">
+                <label class="sr-only">Keywords</label>
+                <input type="text" name="keywords" class="form-control" placeholder="Keyword (Pool, Garage, etc)">
               </div>
-              <!-- Form Row 2 -->
-              <div class="form-row">
-                <div class="col-md-6 mb-3">
-                  <label class="sr-only">Bedrooms</label>
-                  <select name="bedrooms" class="form-control">
-                    <option selected="true" disabled="disabled">Bedrooms (All)</option>
-                    {% for key,value in bedroom_choices.items %}
-                    <option value="{{ key }}">{{ value }}</option>
-                    {% endfor %}
-                  </select>
-                </div>
-                <div class="col-md-6 mb-3">
-                  <select name="price" class="form-control" id="type">
-                    <option selected="true" disabled="disabled">Max Price (Any)</option>
-                    {% for key,value in price_choices.items %}
-                    <option value="{{ key }}">{{ value }}</option>
-                    {% endfor %}
-                  </select>
-                </div>
+
+              <div class="col-md-4 mb-3">
+                <label class="sr-only">City</label>
+                <input type="text" name="city" class="form-control" placeholder="City">
               </div>
-              <button class="btn btn-secondary btn-block mt-4" style="background-color: #80D8FF; color: black;"
-                type="submit">Search</button>
-            </form>
-          </div>
+
+              <div class="col-md-4 mb-3">
+                <label class="sr-only">State</label>
+                <select name="state" class="form-control">
+                  <option selected="true" disabled="disabled">State (All)</option>
+                  {% for key,value in state_choices.items %}
+                    <option value="{{ key }}">{{ value }}</option>
+                  {% endfor %}
+                </select>
+              </div>
+            </div>
+            <!-- Form Row 2 -->
+            <div class="form-row">
+              <div class="col-md-6 mb-3">
+                <label class="sr-only">Bedrooms</label>
+                <select name="bedrooms" class="form-control">
+                  <option selected="true" disabled="disabled">Bedrooms (All)</option>
+                  {% for key,value in bedroom_choices.items %}
+                    <option value="{{ key }}">{{ value }}</option>
+                  {% endfor %}
+                </select>
+              </div>
+              <div class="col-md-6 mb-3">
+                <select name="price" class="form-control" id="type">
+                  <option selected="true" disabled="disabled">Max Price (Any)</option>
+                  {% for key,value in price_choices.items %}
+                    <option value="{{ key }}">{{ value }}</option>
+                  {% endfor %}
+                </select>
+              </div>
+            </div>
+            <button class="btn btn-secondary btn-block mt-4" type="submit">Search</button>
+          </form>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+<br>
 
-
+ <!-- Footer -->
+ <footer id="main-footer" style="background-color: #80D8FF;" class="py-4 text-black text-center">
+  Copyright &copy;
+  <span class="year"></span>  Social Housing Co
+</footer>
 
 </body>
 
